Updated: Use URI.toURL() in place of previous URL()